[package]
name = "classified"
version = "0.1.1"
edition = "2024"

license = "MIT OR Apache-2.0"
description = "High-assurance Operations for Number-theoretic Extension Sets and Theorems (Galois Fields)."

authors = ["James Hunt <jameshuntdevelopment@gmail.com>"]
repository = "https://github.com/jameshuntt/classified"
keywords = ["cryptography", "security", "zeroize", "nist", "hardened"]
categories = ["cryptography", "memory-management", "no-std"]

[features]
default = []
no-clone = []
[dependencies]
secrecy = "0.10.3"
zeroize = { version = "1.8.1", features = ["derive"] }
subtle = { version = "2.6.1", features = ["std"] }
tokio = { version = "1.44.1", features = ["full"] }
thiserror = "2.0.12"
toml = "0.8.20"
futures = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "json", "env-filter", "ansi", "time", "std"] }

[dev-dependencies]
# tokio = { version = "1.44.1", features = ["full"] }